--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-!(https://opentelemetry.io/img/otel_diagram.png)
+![]otel(https://opentelemetry.io/img/otel_diagram.png)
 Vendors :
 * https://opentelemetry.io/vendors/
 
